# Lane-Marking-Quality-Assessment

./: CMakeLists.txt  Parameters.xml  README.md  build.sh
data/2011_09_26/: demo.txt
doc/: Makefile  doc.bib  document.aux  document.bbl  document.blg  document.tex
doc/figure/: .~classdiagrampptx.pptx  classdiagrampptx.pptx
include/: BaseLD.h  KPercentExtractor.h  LMsfromCam.h  LMsintersection.h  LaneDetector.h  LaneQualityChecker.h  PointsVisualizer.h  RoadSegment.h  Solver.h  SurfaceDataMaker.h  Utilities.h  VeloPtsProjectCam.h
matlab/: F1Measure.m  convertKITTIImgs.m  create3Dplot.py  eval_acc.m  eval_all.m  eval_sub.m  gpstolocal.m  intersectionAndUnion.m  pixelAccuracy.m  plotMap.m  readKITTIgps.m  trajectoryLenfKITTI.m  visualizemodel.m  vizualizeModels.m
prototxt/: icnet_cityscapes.prototxt  icnet_cityscapes_bnnomerge.prototxt
src/: KPercentExtractor.cpp  LMsfromCam.cpp  LMsintersection.cpp  LaneDetector.cpp  LaneQualityChecker.cpp  PointsVisualizer.cpp  RoadSegment.cpp  SurfaceDataMaker.cpp  Utilities.cpp  main.cpp
